--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -75,6 +75,9 @@
                         <a class="nav-link " href="/">Home </a>    
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link " href="/userDashboard">Profile </a>    
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/orders">Orders</a>
                     </li>
                     <li class="nav-item">
@@ -82,7 +85,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="/categories">Category<i class="far fa-angle-down"></i></a>
+                        <a class="nav-link" href="/categories">Category<i class=""></i></a>
                         <ul class="droap_menu">
                             <!-- <li><a href="/products">Mobiles</a></li>
                             <li><a href="">Head set</a></li>
