--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -120,8 +120,8 @@
         BANNER START
     ==============================-->
    
-    <section>
-        <div class="row" style="margin-top: 70px;">
+    <section class="fp__banner">
+        <div class="row" >
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <% banners.forEach((banner, index) => { %>
