--- a/views/admin/listOrders.ejs
+++ b/views/admin/listOrders.ejs
@@ -138,8 +138,8 @@
                                     role="tab" aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Product Offers</button>
 
-                                <button class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
-                                    </span> Logout</button>
+                                <button id="banner-tab" class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
+                                    </span>Banner Management</button>
                             </div>
                         </div>
                     </div>
@@ -290,6 +290,10 @@
         })
         document.getElementById("productOffer-tab").addEventListener("click", (event) => {
             window.location.href = "/admin/productOffers"
+
+        })
+        document.getElementById("banner-tab").addEventListener("click", (event) => {
+            window.location.href = "/admin/banner"
 
         })
 
