--- a/views/admin/productOffer.ejs
+++ b/views/admin/productOffer.ejs
@@ -242,6 +242,7 @@
 
             <label for="discount">Discount (%):</label>
             <input type="number" id="productDiscount" name="discount" required>
+            <p id="discountError" style="color: red;"></p>
 
             <button onclick="createOffer()" class="btn btn-primary" type="submit">Create Offer</button>
         
