--- a/views/admin/usersList.ejs
+++ b/views/admin/usersList.ejs
@@ -147,8 +147,8 @@
                                     aria-controls="v-pills-settings" aria-selected="false"><span><i
                                             class="fas fa-user-lock"></i></span>Product Offers</button>
 
-                                <button id="logout" class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
-                                    </span> Logout</button>
+                                <button id="banner-tab" class="nav-link" type="button"><span> <i class="fas fa-sign-out-alt"></i>
+                                    </span>Banner Management</button>
                             </div>
                         </div>
                     </div>
@@ -256,6 +256,10 @@
     })
     document.getElementById("productOffer-tab").addEventListener("click" , (event)=>{
         window.location.href = "/admin/productOffers"
+
+    })
+    document.getElementById("banner-tab").addEventListener("click" , (event)=>{
+        window.location.href = "/admin/banner"
 
     })
 
