--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -81,7 +81,7 @@
 
     const removeWishlist =(productId)=>{
         Swal.fire({
-      title:'Are you sure you want Cancel the Order?',
+      title:'Are you sure you want to remove from wishlist?',
       icon:'warning',
       showCancelButton:true,
       confirmButtonColor:'#3085d6',
